$Id$

Summary of Changes for Duro

Changes for Duro 0.15

- Added RDB_del_nonscalar_type(). Changed RDB_drop_type to support only user-defined types.

- Replaced iargp and iarglen parameters of RDB_create_ro_op() and RDB_create_update_op()
  by explicit source code parameter.

- Explicit BEGIN TRANSACTION no longer required in Duro D/T for invoking
  user-defined operators and using user-defined types.

- Trace output can be enabled using RDB_env_trace() and TRACE().

- Tuple JOIN is now tuple UNION.

- Duro D/T: Changed WITH and EXTEND syntax according to Database Explorations.

- Duro D/T now supports headings in relation selectors.

- Duro D/T sets LC_CTYPE and LC_COLLATE locales according to the environment.

- Added RDB_is_selector().

- Removed RDB_tx_env().

- Added aggregate operators AND and OR as synonyms for ALL and ANY.

- Added XOR.

- Added TUP, REL, DEE, and DUM as synonyms for TUPLE, RELATION, TABLE_DEE
  and TABLE_DUM.

- Changed interface and calling conventions for user-defined operators.

- Added RDB_get_update_op to the public interface. Renamed RDB_call_ro_op
and RDB_call_update_op as RDB_call_ro_op_by_name and RDB_call_update_op_by_name.
Added RDB_call_update_op with new semantics.

- Conversion of expressions etc. to string is now part of the core.

- File I/O

- Upgrade to Berkeley DB 5.2. (But older versions should work too)

- Store user-defined operators as source code

- RDB_expr_type now always raises an error if the type could not be determined.

- Change in catalog table SYS_POSSREPCOMPS

- Changed type handling in RDB_evaluate(), RDB_call_ro_op(), and
  RDB_call_update_op(),

Duro D/T:

- LEAVE is now supported

- Improved array support

- Non-scalar types allowed as possrep components

- Changed FOR/DO to allow for zero iterations

Changes for Duro 0.14

- Upgraded to Berkeley DB 4.7.

- Duro D/T now supports CASE and constraints.

- Added exception handling to Duro D/T.

- Dropped first argument of CONNECT.
